Add support for mobile devices

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Elijas Dapšauskas</title>
   <link rel="stylesheet" href="./style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -15,27 +16,30 @@
 <div class="absolutely-centered">
   <span class="title">Elijas Dapšauskas</span>
   <br>
-  <span class="caption" id="caption-1">Data Scientist</span>
-  <span class="caption" id="caption-2">Software Engineer</span>
-  <span class="caption" id="caption-3">AI Developer</span>
+  <div class="captions">
+    <span class="caption" id="caption-1">Data Scientist</span>
+    <span class="caption" id="caption-2">Software Engineer</span>
+    <span class="caption" id="caption-3">AI Developer</span>
+  </div>
   <br>
   <div class="links">
-    <div class="link"><a href="mailto:elijas.dapsauskas+ai@gmail.com">
-      <i class="fa fa-envelope"></i> 
-      <span class="link-text">Contact</dev>
-    </a></div>
+
     <div class="link"><a href="./resume.pdf">
       <i class="fa fa-user"></i> 
       <span class="link-text">Resume</dev>
-    </a></div>
+    </a></div><br class="rwd-break">
     <div class="link"><a href="https://bit.ly/elijas-linkedin">
       <i class="fa fa-linkedin"></i> 
       <span class="link-text">Linkedin</dev>
-    </a></div>
+    </a></div><br class="rwd-break">
     <div class="link"><a href="https://bit.ly/elijas-github">
       <i class="fa fa-github"></i> 
       <span class="link-text">Github</dev>
-    </a></div>
+    </a></div><br class="rwd-break">
+    <div class="link"><a href="mailto:elijas.dapsauskas+ai@gmail.com">
+      <i class="fa fa-envelope"></i> 
+      <span class="link-text">Contact</dev>
+    </a></div><br class="rwd-break">
    </div>
 </div>
 <!-- partial -->
