--- a/index.html
+++ b/index.html
@@ -1,50 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Elijas Dapšauskas</title>
-  <link rel="stylesheet" href="./style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-
-<div class='particle-network-animation'></div>
-
-<div class="absolutely-centered">
-  <span class="title">Elijas Dapšauskas</span>
-  <br>
-  <div class="captions">
-    <span class="caption" id="caption-1">Data Scientist</span>
-    <span class="caption" id="caption-2">Software Engineer</span>
-    <span class="caption" id="caption-3">AI Developer</span>
-  </div>
-  <br>
-  <div class="links">
-
-    <div class="link"><a href="./resume.pdf">
-      <i class="fa fa-user"></i> 
-      <span class="link-text">Resume</dev>
-    </a></div><br class="rwd-break">
-    <div class="link"><a href="https://bit.ly/elijas-linkedin">
-      <i class="fa fa-linkedin"></i> 
-      <span class="link-text">Linkedin</dev>
-    </a></div><br class="rwd-break">
-    <div class="link"><a href="https://bit.ly/elijas-github">
-      <i class="fa fa-github"></i> 
-      <span class="link-text">Github</dev>
-    </a></div><br class="rwd-break">
-    <div class="link"><a href="mailto:elijas.dapsauskas+ai@gmail.com">
-      <i class="fa fa-envelope"></i> 
-      <span class="link-text">Contact</dev>
-    </a></div><br class="rwd-break">
-   </div>
-</div>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script  src="./script.js"></script>
-
-</body>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145447537-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-145447537-1');
+        </script>
+        
+        <meta charset="UTF-8">
+        <title>Elijas Dapšauskas</title>
+        <link rel="stylesheet" href="./style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <!-- partial:index.partial.html -->
+        <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+        <div class='particle-network-animation'></div>
+        <div class="absolutely-centered">
+            <span class="title">Elijas Dapšauskas</span>
+            <br>
+            <div class="captions">
+                <span class="caption" id="caption-1">Data Scientist</span>
+                <span class="caption" id="caption-2">Software Engineer</span>
+                <span class="caption" id="caption-3">AI Developer</span>
+            </div>
+            <br>
+            <div class="links">
+                <div class="link"><a href="./resume.pdf">
+                    <i class="fa fa-user"></i> 
+                    <span class="link-text">Resume</dev>
+                    </a>
+                </div>
+                <br class="rwd-break">
+                <div class="link"><a href="https://bit.ly/elijas-linkedin">
+                    <i class="fa fa-linkedin"></i> 
+                    <span class="link-text">Linkedin</dev>
+                    </a>
+                </div>
+                <br class="rwd-break">
+                <div class="link"><a href="https://bit.ly/elijas-github">
+                    <i class="fa fa-github"></i> 
+                    <span class="link-text">Github</dev>
+                    </a>
+                </div>
+                <br class="rwd-break">
+                <div class="link"><a href="mailto:elijas.dapsauskas+ai@gmail.com">
+                    <i class="fa fa-envelope"></i> 
+                    <span class="link-text">Contact</dev>
+                    </a>
+                </div>
+                <br class="rwd-break">
+            </div>
+        </div>
+        <!-- partial -->
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script  src="./script.js"></script>
+    </body>
 </html>
