--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
         <div class='particle-network-animation'></div>
         <div class="absolutely-centered">
-            <span class="title">Elijas Dapšauskas</span>
+            <span class="title">Lizaveta (Elizabeth) Kemerava</span>
             <br>
             <div class="captions">
                 <span class="caption" id="caption-1">Data Scientist</span>
@@ -48,7 +48,7 @@
                     </a>
                 </div>
                 <br class="rwd-break">
-                <div class="link"><a href="mailto:elijas.dapsauskas+ai@gmail.com">
+                <div class="link"><a href="mailto:elizabeth.kemerov@gmail.com">
                     <i class="fa fa-envelope"></i> 
                     <span class="link-text">Contact</dev>
                     </a>
