--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     </a>
                 </div>
                 <br class="rwd-break">
-                <div class="link"><a href="https://bit.ly/elijas-linkedin">
+                <div class="link"><a href="www.linkedin.com/in/lizaveta-kemerava">
                     <i class="fa fa-linkedin"></i> 
                     <span class="link-text">Linkedin</dev>
                     </a>
                 </div>
                 <br class="rwd-break">
-                <div class="link"><a href="https://bit.ly/elijas-github">
+                <div class="link"><a href="https://github.com/kemerava">
                     <i class="fa fa-github"></i> 
                     <span class="link-text">Github</dev>
                     </a>
