--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </a>
                 </div>
                 <br class="rwd-break">
-                <div class="link"><a href="http://linkedin.com/in/lizaveta-kemerava">
+                <div class="link"><a href="https://linkedin.com/in/lizaveta-kemerava">
                     <i class="fa fa-linkedin"></i> 
                     <span class="link-text">Linkedin</dev>
                     </a>
